Bug 415987  FREEBUSY decoding does not support comma-separated entries; r=philipp